--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
   "name": "view-pdf",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@config-plugins/react-native-blob-util": "^5.0.0",
+    "@config-plugins/react-native-pdf": "^5.0.0",
     "expo": "~48.0.9",
     "expo-status-bar": "~1.4.4",
+    "fbjs": "^3.0.4",
     "react": "18.2.0",
-    "react-native": "0.71.4"
+    "react-dom": "^18.2.0",
+    "react-native": "0.71.4",
+    "react-native-blob-util": "^0.17.3",
+    "react-native-pdf": "^6.6.2",
+    "react-native-web": "~0.18.11",
+    "expo-splash-screen": "~0.18.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
